samples/_failures_safe/1761247046_b3dfef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddc2060b.c: In function ‘main’:
./samples/SAFE/__tmp_ddc2060b.c:134:30: error: missing terminating " character
  134 |     add_log_entry(&analyzer, "2024-01-15 10:
      |                              ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ddc2060b.c:134:5: error: expected expression at end of input
  134 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ddc2060b.c:134:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_ddc2060b.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ddc2060b.c:134:5: error: expected declaration or statement at end of input
  134 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
